Trying to troubleshoot js and overlapping navbar issues

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.poc-navbar {
+  padding-bottom: 2rem;
+}
